<resources>
    <string name="app_name">BMICalculator</string>
    <string name="weight">Weight</string>
    <string name="cm">Cm</string>
    <string name="Zero">0</string>
    <string name="height">Height</string>
    <string name="kg">Kg</string>
    <string name="calculate">Calculate</string>
    <string name="NormalRange">(normal range is 18.5-24.9)</string>
    <string name="adviceMessage">You are healthy</string>
    <string name="result">24.85</string>
</resources>