<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/card_background"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp"
        app:cardMaxElevation="15dp"
        app:contentPadding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/weight"
                android:textColor="@color/text_hint"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvWeight"
                android:layout_alignStart="@id/tvWeight"
                android:layout_marginTop="10dp"
                android:ems="4"
                android:inputType="number"
                android:textColor="@color/text_hint"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvKg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/etWeight"
                android:layout_toEndOf="@id/etWeight"
                android:text="@string/kg"
                android:textColor="@color/text_hint"
                android:textSize="24sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cvWeight"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/card_background"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp"
        app:cardMaxElevation="15dp"
        app:contentPadding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/height"
                android:textColor="@color/text_hint"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvHeight"
                android:layout_alignStart="@id/tvHeight"
                android:layout_marginTop="10dp"
                android:ems="4"
                android:inputType="number"
                android:textColor="@color/text_hint"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/etHeight"
                android:layout_toEndOf="@id/etHeight"
                android:text="@string/cm"
                android:textColor="@color/text_hint"
                android:textSize="24sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnCal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cvHeight"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_button"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/calculate"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCal"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/card_background"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp"
        app:cardMaxElevation="15dp"
        app:contentPadding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvOutput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvOutput"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvResult"
                android:layout_centerHorizontal="true"
                android:textColor="@color/text_hint"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>